--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -477,7 +477,7 @@
                                                 }
                                                 @if (User.IsInRole(TipoRoles.SCDM_MM_APROBACION_SOLICITUDES))
                                                 {
-                                                    <li class="@(ViewBag.SegundoNivel == "solicitudes_departamento" ? "current-page" : null )"><a href="@Url.Action("SolicitudesDepartamento", "SCDM_solicitud")">Aprobar de Solicitudes</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "solicitudes_departamento" ? "current-page" : null )"><a href="@Url.Action("SolicitudesDepartamento", "SCDM_solicitud")">Aprobar Solicitudes</a></li>
                                                 }
                                                 @if (User.IsInRole(TipoRoles.SCDM_MM_ADMINISTRADOR))
                                                 {
