--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
@@ -326,7 +326,7 @@
                                     <dt class="col-sm-2">@Html.DisplayNameFor(model => model.justificacion)</dt>
                                     <dd class="col-sm-2">@Html.DisplayFor(model => model.justificacion)</dd>
                                     <dt class="col-sm-2">@Html.DisplayNameFor(model => model.fecha_creacion)</dt>
-                                    <dd class="col-sm-2">@Html.DisplayFor(model => model.fecha_creacion)</dd>
+                                    <dd class="col-sm-2">@Html.DisplayFor(model => model.fecha_creacion)</dd>                             
                                 </dl>
                             </div>
                         </div>
@@ -437,7 +437,6 @@
                                                     <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-info" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Documentos Soporte</button></h3>
                                                 </div>
                                                 <div class="wf-accordion__panel js-accordion__panel" aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
-                                                    <p id="lista_tecnica_text" style="display:none; color:red">No se definieron los componentes para la lista tecnica, favor de agregarlos.</p>
                                                     @foreach (var item in Model.SCDM_rel_solicitud_archivos)
                                                     {
                                                         <div class="form-group row" id="div_document_support_1">
@@ -745,7 +744,9 @@
                                                 </div>
                                             </div>
                                         }
-                                        @if (Model.SCDM_solicitud_rel_item_material.Any(x => x.SCDM_solicitud_rel_facturacion.Any()) || Model.SCDM_solicitud_rel_creacion_referencia.Any(x => x.SCDM_solicitud_rel_facturacion.Any()))
+                                        @if (Model.SCDM_solicitud_rel_item_material.Any(x => x.SCDM_solicitud_rel_facturacion.Any()) || Model.SCDM_solicitud_rel_creacion_referencia.Any(x => x.SCDM_solicitud_rel_facturacion.Any())
+                                            && (idEmpleadoDepartamento == (int)Bitacoras.Util.SCDM_departamentos_AsignacionENUM.FACTURACION || idEmpleadoDepartamento == (int)Bitacoras.Util.SCDM_departamentos_AsignacionENUM.SCDM)
+                                            )
                                         {
                                             //Facturacion
                                             <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
@@ -758,7 +759,7 @@
                                                     <div id="hot_facturacion"></div>
                                                     <p>
                                                         <br />
-                                                        @if (puedeEditar && !details)
+                                                        @if ((puedeEditar && !details) || (Model.SCDM_solicitud_asignaciones.Any(x=>x.fecha_cierre == null && x.fecha_rechazo == null && x.id_departamento_asignacion == (int)Bitacoras.Util.SCDM_departamentos_AsignacionENUM.FACTURACION)))
                                                         {
                                                             <a href="@Url.Action("EditFacturacion", ViewBag.ControllerName, new { id = Model.id, viewUser = viewUser  })" class="btn btn-success btn-sm float-left" style="color:white">
                                                                 <i class="fa-regular fa-pen-to-square"></i>
@@ -1934,7 +1935,7 @@
                 'Avance (mm)', 'Tolerancia avance negativa (mm)', 'Tolerancia avance positiva (mm)',
                 'Planicidad (mm)', 'Superficie', 'Tratamiento Superficial', 'Peso del recubrimiento', 'Nombre Molino', 'Forma', 'Núm. cliente', 'Núm. parte del cliente',
                 'MSA (Honda)', 'Diametro Exterior', 'Diametro Interior',
-                'Otro Dato', 'Comentario Adicional'];
+                'Otro Dato', 'Comentario Adicional', 'Valido'];
 
             hot = new Handsontable(container, {
                 autoWrapRow: true,
@@ -2010,7 +2011,7 @@
                 },
                 hiddenColumns: {
                     // specify columns hidden by default
-                    columns: [0, GetColFromName("Descripción (Original)", colHeader)], //contains ID
+                    columns: [0, GetColFromName("Descripción (Original)", colHeader), GetColFromName("Valido", colHeader)], //contains ID
                 },
                 licenseKey: 'non-commercial-and-evaluation',
                 rowHeaders: true,
@@ -2181,19 +2182,19 @@
         function inicializaCambioIngenieria() {
             const container = document.querySelector('#hot_cambio_ingenieria');
 
-            let colHeader = ['ID', 'Material Existente', 'Tipo de Material', 'Planta',
-                'Núm. antigüo material', 'Peso Bruto (KG)', 'Peso Neto (KG)', 'Unidad Base Medida', 'Commodity', 'Grado/Calidad',
+            let colHeader = ['ID', 'Material Existente', 'Tipo de Material', 'Planta','Tipo Metal', 'Selling Type (Budget)',
+                'Núm. antigüo material', 'Peso Bruto (KG)', 'Peso Neto (KG)', 'Unidad Base Medida', 'Descripción (Original)', 'Descripción (ES)', 'Descripción (EN)', 'Commodity', 'Grado/Calidad',
                 'Espesor (mm)', 'Tolerancia espesor negativa (mm)', 'Tolerancia espesor positiva (mm)',
                 'Ancho (mm)', 'Tolerancia ancho negativa (mm)', 'Tolerancia ancho positiva (mm)',
                 'Avance (mm)', 'Tolerancia avance negativa (mm)', 'Tolerancia avance positiva (mm)',
                 'Planicidad (mm)', 'Superficie', 'Tratamiento Superficial', 'Peso del recubrimiento', 'Nombre Molino', 'Forma', 'Núm. cliente', 'Núm. parte del cliente',
                 'MSA (Honda)', 'Diametro Exterior', 'Diametro Interior',
-                'Otro Dato', 'Comentario Adicional'];
+                'Otro Dato', 'Comentario Adicional', 'Valido'];
 
             hot = new Handsontable(container, {
                 autoWrapRow: true,
                 nestedHeaders: [
-                    ['', { label: 'Material Existente', colspan: 3 }, { label: 'Datos Base', colspan: 4 }, { label: 'Clasificación', colspan: 22 }, { label: 'Otros Datos', colspan: 2 }],
+                    ['', { label: 'Material Existente', colspan: 5 }, { label: 'Datos Base', colspan: 7 }, { label: 'Clasificación', colspan: 22 }, { label: 'Otros Datos', colspan: 2 }],
                     colHeader
                 ],
                 afterGetColHeader: function (col, TH) {
@@ -2214,11 +2215,16 @@
                     } else {
                         switch (col) {
                             case GetColFromName("Tipo de Material", colHeader):
-                            case GetColFromName("Planta", colHeader):
+                            case GetColFromName("Planta", colHeader):                            
+                            case GetColFromName("Selling Type (Budget)", colHeader):
+                            case GetColFromName("Tipo Metal", colHeader):
                                 applyClass(TH, 'HTPurple');
-                                break;
+                                break;                            
                             case GetColFromName("Otro Dato", colHeader):
                             case GetColFromName("Comentario Adicional", colHeader):
+                            case GetColFromName("Descripción (Original)", colHeader):
+                            case GetColFromName("Descripción (ES)", colHeader):
+                            case GetColFromName("Descripción (EN)", colHeader):
                                 applyClass(TH, 'HTgreen');
                                 break;
                             case GetColFromName("Material Existente", colHeader):
@@ -2257,7 +2263,7 @@
                 },
                 hiddenColumns: {
                     // specify columns hidden by default
-                    columns: [0], //contains ID
+                    columns: [0, GetColFromName("Descripción (Original)", colHeader), GetColFromName("Valido", colHeader)], //contains ID
                 },
                 licenseKey: 'non-commercial-and-evaluation',
                 rowHeaders: true,
